WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47723
[GTK] Fix introspection support
https://bugs.webkit.org/show_bug.cgi?id=47723
Summary
[GTK] Fix introspection support
Sergio Villar Senin
Reported
2010-10-15 08:17:30 PDT
HTTP cache patch broke introspection
Attachments
Fix for the bug
(2.67 KB, patch)
2010-10-15 09:26 PDT
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2010-10-15 09:26:18 PDT
Created
attachment 70875
[details]
Fix for the bug
Martin Robinson
Comment 2
2010-10-15 09:35:20 PDT
Comment on
attachment 70875
[details]
Fix for the bug Okay. Looks good. Thanks.
WebKit Commit Bot
Comment 3
2010-10-15 09:48:15 PDT
Comment on
attachment 70875
[details]
Fix for the bug Clearing flags on attachment: 70875 Committed
r69858
: <
http://trac.webkit.org/changeset/69858
>
WebKit Commit Bot
Comment 4
2010-10-15 09:48:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug