2010-10-15  Sergio Villar Senin  <svillar@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Fix introspection support
        https://bugs.webkit.org/show_bug.cgi?id=47723

        Added HTTP cache directory to the WebkitGtk+ GIR sources.

        * GNUmakefile.am:
2010-10-15  Sergio Villar Senin  <svillar@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Fix introspection support
        https://bugs.webkit.org/show_bug.cgi?id=47723

        WebKitSoupCacheType was incorrectly registered twice. Renamed to
        WebKitSoupCacheTypeType for the enumerated type.

        * platform/network/soup/cache/webkit/soup-cache.c:
        (webkit_soup_cache_type_get_type):

Canonical link: https://commits.webkit.org/60437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69858 268f45cc-cd09-0410-ab3c-d52691b4dbfc